--- a/src/App.css
+++ b/src/App.css
@@ -5,31 +5,9 @@
 .App-header {
   text-align: center;
   background-color: #2C5691;
+  width: 100%;
   height: 40px;
-  padding: 12px;
+  padding: 12px 30px 12px 30px;
   color: white;
   box-shadow: 0px 0px 18px #344257;
-}
-
-.vid {
-  width: 720px;
-  height: 480px;
-}
-@media only screen and (max-width:768px) {
-  .vid {
-    width: 768px;
-    height: calc((768/720)*480px);
-  }
-}
-@media only screen and (max-width:480px) {
-  .vid {
-    width: 480px;
-    height: calc((480/720)*480px);
-  }
-}
-@media only screen and (max-width:320px) {
-  .vid {
-    width: calc(320px);
-    height: calc((320/720)*480px);
-  }
 }
