--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   width: 100%;
   height: 40px;
   padding: 12px 30px 12px 30px;
+  margin-bottom: 16px;
   color: white;
   box-shadow: 0px 0px 18px #344257;
 }
