--- a/src/components/css/videoDisplay.css
+++ b/src/components/css/videoDisplay.css
@@ -13,7 +13,9 @@
   border-width: thick;
   border-radius: 6px;
 }
-
+.currentVideo {
+  background-color: #1A1A1A;
+}
 
 @media all and (min-width: 480px) {
   .videoPlaylist,
