--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,21 @@
 
 .App-header {
   text-align: center;
-  background-color: #2C5691;
-  width: 100%;
-  height: 40px;
-  padding: 12px 30px 12px 30px;
-  margin-bottom: 16px;
-  color: white;
-  box-shadow: 0px 0px 18px #344257;
+  width: 98%;
+  height: 50px;
+  border-style: solid;
+  border-color: #E9F5F4;
+  border-width: 5px;
+  border-radius: 16px;
+  background-color: #1a1a1a;
+  color: #ebf2f7;
+  padding: 2px;
+  margin: 6px;
+}
+
+.App-header p {
+  font-family: Verdana, Arial;
+  font-size: 18px;
+  margin: auto;
+  padding-top: 12px;
 }
