--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  background-color: #F5F7FA;
+  background-color: #020f09;
+  font-family: Arial, Verdana;
 }
