--- a/src/components/styles/Playlist.css
+++ b/src/components/styles/Playlist.css
@@ -1,13 +1,13 @@
 #drop_zone {
   background-color: #4E5A69;
-  width:  92%;
-  height: 100px;
+  max-width:  90%;
+  max-height: 100px;
   margin: auto;
   text-align: center;
   color: #EBEFF5;
   font-weight: 600;
   margin-top: 6px;
-  border-radius: 12px;
+  border-radius: 4px;
   border-style: inset;
   border-width: 3px;
   border-color: #8D9094;
