--- a/src/components/styles/VideoConfig.css
+++ b/src/components/styles/VideoConfig.css
@@ -1,17 +1,65 @@
 .video-config {
-  text-align: center;
-}
-.speed-control, .opacity-control, .volume-control {
-  width: 48%;
-  height: auto;
-  font-size: 14px;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
 }
 .skip {
-  text-align: left;
   width: 90%
 }
+.speed-control, .opacity-control, .volume-control {
+  width: 90%;
+  height: auto;
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
 .speed-slider, .opacity-slider, .volume-slider {
-  width: 92%;
-  height: 16px;
+  max-width: 60%;
+  max-height: 12px;
   outline: none;
+  order: 2;
+}
+.mute-box {
+  font-size: 10px;
+  order: 3;
+  text-align: left;
+}
+.meter {
+  order: 1;
+  text-align: left;
+  max-width: 40%;
+  margin-right: 12px;
+}
+
+
+
+
+input[type=range] {
+  height: 6px;
+  -webkit-appearance: none;
+  margin: 10px 0;
+  width: 100%;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 6px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 0px #000000;
+  background: #7DD199;
+  border-radius: 0px;
+  border: 0px solid #000000;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 0px #A7BBCF;
+  border: 1px solid #3530BA;
+  height: 16px;
+  width: 16px;
+  border-radius: 7px;
+  background: #E8FFE6;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -5.5px;
 }
