--- a/src/components/styles/VideoConfig.css
+++ b/src/components/styles/VideoConfig.css
@@ -35,6 +35,66 @@
 
 
 
+input[type=range]:focus::-ms-fill-lower {
+  background: #7DD199;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #7DD199;
+}
+
+input[type=range]::-ms-fill-lower {
+  background: #7DD199;
+  border: 0px solid #000000;
+  border-radius: 0px;
+  box-shadow: 0px 0px 0px #000000;
+}
+input[type=range]::-ms-fill-upper {
+  background: #7DD199;
+  border: 0px solid #000000;
+  border-radius: 0px;
+  box-shadow: 0px 0px 0px #000000;
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 6px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+
+input[type=range]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow: 1px 1px 0px #A7BBCF;
+  border: 1px solid #3530BA;
+  height: 16px;
+  width: 16px;
+  border-radius: 7px;
+  background: #E8FFE6;
+  cursor: pointer;
+}
+
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 6px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 0px #000000;
+  background: #7DD199;
+  border-radius: 0px;
+  border: 0px solid #000000;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 1px 1px 0px #A7BBCF;
+  border: 1px solid #3530BA;
+  height: 16px;
+  width: 16px;
+  border-radius: 7px;
+  background: #E8FFE6;
+  cursor: pointer;
+}
 
 input[type=range] {
   height: 6px;
