--- a/src/components/styles/VideoConfig.css
+++ b/src/components/styles/VideoConfig.css
@@ -2,20 +2,36 @@
   text-align: left;
   display: flex;
   flex-direction: column;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
 .skip {
-  width: 90%
+  width: 90%;
+  outline: none;
 }
-.speed-control, .opacity-control, .volume-control {
+.speed-control,
+.opacity-control,
+.opacity-control0,
+.opacity-control2,
+.opacity-control3,
+.opacity-control4,
+.volume-control {
   width: 90%;
   height: auto;
   font-size: 12px;
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
-.speed-slider, .opacity-slider, .volume-slider {
+.speed-slider,
+.opacity-slider,
+.opacity-slider0,
+.opacity-slider2,
+.opacity-slider3,
+.opacity-slider4,
+.volume-slider {
   max-width: 60%;
   max-height: 12px;
   outline: none;
@@ -31,25 +47,24 @@
   text-align: left;
   max-width: 40%;
   margin-right: 12px;
+  outline: none;
 }
-
-
 
 input[type=range]:focus::-ms-fill-lower {
-  background: #7DD199;
+  background: #7dd199;
 }
 input[type=range]:focus::-ms-fill-upper {
-  background: #7DD199;
+  background: #7dd199;
 }
 
 input[type=range]::-ms-fill-lower {
-  background: #7DD199;
+  background: #7dd199;
   border: 0px solid #000000;
   border-radius: 0px;
   box-shadow: 0px 0px 0px #000000;
 }
 input[type=range]::-ms-fill-upper {
-  background: #7DD199;
+  background: #7dd199;
   border: 0px solid #000000;
   border-radius: 0px;
   box-shadow: 0px 0px 0px #000000;
@@ -67,12 +82,12 @@ input[type=range]::-ms-track {
 
 input[type=range]::-ms-thumb {
   margin-top: 1px;
-  box-shadow: 1px 1px 0px #A7BBCF;
-  border: 1px solid #3530BA;
+  box-shadow: 1px 1px 0px #a7bbcf;
+  border: 1px solid #3530ba;
   height: 16px;
   width: 16px;
   border-radius: 7px;
-  background: #E8FFE6;
+  background: #e8ffe6;
   cursor: pointer;
 }
 
@@ -82,17 +97,17 @@ input[type=range]::-moz-range-track {
   cursor: pointer;
   animate: 0.2s;
   box-shadow: 0px 0px 0px #000000;
-  background: #7DD199;
+  background: #7dd199;
   border-radius: 0px;
   border: 0px solid #000000;
 }
 input[type=range]::-moz-range-thumb {
-  box-shadow: 1px 1px 0px #A7BBCF;
-  border: 1px solid #3530BA;
+  box-shadow: 1px 1px 0px #a7bbcf;
+  border: 1px solid #3530ba;
   height: 16px;
   width: 16px;
   border-radius: 7px;
-  background: #E8FFE6;
+  background: #e8ffe6;
   cursor: pointer;
 }
 
@@ -108,17 +123,17 @@ input[type=range]::-webkit-slider-runnable-track {
   cursor: pointer;
   animate: 0.2s;
   box-shadow: 0px 0px 0px #000000;
-  background: #7DD199;
+  background: #7dd199;
   border-radius: 0px;
   border: 0px solid #000000;
 }
 input[type=range]::-webkit-slider-thumb {
-  box-shadow: 1px 1px 0px #A7BBCF;
-  border: 1px solid #3530BA;
+  box-shadow: 1px 1px 0px #a7bbcf;
+  border: 1px solid #3530ba;
   height: 16px;
   width: 16px;
   border-radius: 7px;
-  background: #E8FFE6;
+  background: #e8ffe6;
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -5.5px;
