--- a/src/components/styles/VideoConfig.css
+++ b/src/components/styles/VideoConfig.css
@@ -1,7 +1,6 @@
 .video-config {
-  text-align: left;
   display: flex;
-  flex-direction: column;
+  flex-flow: column wrap;
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+/Edge */
@@ -12,16 +11,16 @@
   outline: none;
 }
 .control {
-  width: 90%;
   height: auto;
-  font-size: 12px;
+  font-size: 14px;
   display: flex;
-  justify-content: center;
   align-items: center;
+  padding: 6px;
 }
 .slider {
-  max-width: 60%;
-  max-height: 12px;
+  max-width: 100%;
+  height: 16px;
+  text-align: left;
   outline: none;
   order: 2;
 }
@@ -32,7 +31,7 @@
 }
 .meter {
   order: 1;
-  text-align: left;
+  text-align: right;
   max-width: 40%;
   margin-right: 12px;
   outline: none;
@@ -60,7 +59,7 @@ input[type=range]::-ms-fill-upper {
 
 input[type=range]::-ms-track {
   width: 100%;
-  height: 6px;
+  height: 12px;
   cursor: pointer;
   animate: 0.2s;
   background: transparent;
@@ -73,7 +72,7 @@ input[type=range]::-ms-thumb {
   box-shadow: 1px 1px 0px #a7bbcf;
   border: 1px solid #3530ba;
   height: 16px;
-  width: 16px;
+  width: 24px;
   border-radius: 7px;
   background: #e8ffe6;
   cursor: pointer;
@@ -81,7 +80,7 @@ input[type=range]::-ms-thumb {
 
 input[type=range]::-moz-range-track {
   width: 100%;
-  height: 6px;
+  height: 12px;
   cursor: pointer;
   animate: 0.2s;
   box-shadow: 0px 0px 0px #000000;
@@ -92,7 +91,7 @@ input[type=range]::-moz-range-track {
 input[type=range]::-moz-range-thumb {
   box-shadow: 1px 1px 0px #a7bbcf;
   border: 1px solid #3530ba;
-  height: 16px;
+  height: 24px;
   width: 16px;
   border-radius: 7px;
   background: #e8ffe6;
@@ -100,14 +99,14 @@ input[type=range]::-moz-range-thumb {
 }
 
 input[type=range] {
-  height: 6px;
+  height: 12px;
   -webkit-appearance: none;
   margin: 10px 0;
   width: 100%;
 }
 input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
-  height: 6px;
+  height: 12px;
   cursor: pointer;
   animate: 0.2s;
   box-shadow: 0px 0px 0px #000000;
@@ -118,7 +117,7 @@ input[type=range]::-webkit-slider-runnable-track {
 input[type=range]::-webkit-slider-thumb {
   box-shadow: 1px 1px 0px #a7bbcf;
   border: 1px solid #3530ba;
-  height: 16px;
+  height: 24px;
   width: 16px;
   border-radius: 7px;
   background: #e8ffe6;
