--- a/src/components/styles/VideoDisplay.css
+++ b/src/components/styles/VideoDisplay.css
@@ -4,16 +4,14 @@
   flex-flow: row wrap;
 }
 .VideoPlayer {
-  flex: 2;
   max-width: 640px;
   max-height: 480px;
 }
-.Playlist,
+
 .video-config {
-  flex: 1;
+  flex-basis: auto;
 }
 .VideoPlayer,
-.Playlist,
 .video-config {
   border-style: solid;
   border-color: #365D80;
@@ -27,54 +25,18 @@
 span {
   opacity: 0;
 }
-.Playlist {
-  max-width: 20%;
-  height: auto;
-}
-.App-header {
-  border-style: solid;
-  border-color: #365D80;
-  border-width: 2px;
-  border-radius: 4px;
-  background-color: #020A0F;
-  color: #ebf2f7;
-  text-align: center;
-  max-width: 100%;
-  height: 50px;
-  display: block;
-  margin: 6px;
-}
 
-.App-header p {
-  font-family: Verdana, Arial;
-  font-size: 18px;
-  margin: auto;
-  padding-top: 12px;
-}
-@media all and (min-width: 900px) {
-  .Playlist {
-    max-width: 100%;
-    max-height: 10%;
-  }
-}
 @media all and (min-width: 480px) {
-  .Playlist,
   .video-config {
     flex: 1 auto;
   }
 }
 @media all and (min-width: 768px) {
   .VideoPlayer {
-    flex: 2 0px;
-  }
-  .Playlist {
     order: 1;
   }
-  .VideoPlayer {
-    order: 2;
-  }
   .video-config {
-    order: 3;
+    order: 2;
   }
 
 }
