--- a/src/components/styles/VideoConfig.css
+++ b/src/components/styles/VideoConfig.css
@@ -12,13 +12,13 @@
 }
 .control {
   height: auto;
+  width: 50%;
   font-size: 14px;
   display: flex;
   align-items: center;
   padding: 6px;
 }
 .slider {
-  max-width: 100%;
   height: 16px;
   text-align: left;
   outline: none;
