--- a/src/components/styles/VideoPlayer.css
+++ b/src/components/styles/VideoPlayer.css
@@ -1,6 +1,9 @@
-
+.VideoPlayer {
+  width: 800px;
+  height: 600px;
+}
 .buffer-layer {
-  width: 640px;
+  width: 800px;
   height: 600px;
   left: 50%;
   z-index: 0;
@@ -12,20 +15,22 @@
 .loaded-video {
   display: block;
   position: fixed;
-  width: 100%;
-  height: 100%;
+  width: 800px;
+  height: 600px;
 }
 
 .layer {
   display: block;
   position: fixed;
   width: 100%;
-  height: 80%;
-  transform: translateY(12.5%);
+  height: 74.5%;
+  transform: translateY(17%);
 }
-
+.buffer-layer {
+  background-color: '#ffffff';
+}
 .layer-0 {
-  z-index: 10;
+  z-index: 0;
 }
 .layer-1 {
   z-index: 1;
