reactify opacity slider/control, adjust formatting/style

--- a/src/components/styles/OpacityControl.css
+++ b/src/components/styles/OpacityControl.css
@@ -1,3 +1,17 @@
 #layerOne {
   background-color: rgba(214, 136, 0, 1);
 }
+
+.opacitometer-1 {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.dual-label {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
