--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 
 .App {
   text-align: left;
+  display: block;
+  max-width: 100%;
+  height: 656px;
 }
 
 .App-header {
@@ -12,7 +15,7 @@
 }
 
 .now-playing {
-  width: 800px;
+  width: 804px;
 }
 .now-playing, .Playlist {
   border-style: solid;
@@ -40,5 +43,6 @@
 
 .Playlist {
   text-align: center;
-  margin-left: 16px;
+  margin-left: 12px;
+  max-width: 30%;
 }
