--- a/src/components/styles/VideoPlayer.css
+++ b/src/components/styles/VideoPlayer.css
@@ -23,11 +23,9 @@
   display: block;
   position: fixed;
   width: 100%;
-  height: 74.5%;
-  transform: translateY(17%);
-}
-.buffer-layer {
-  background-color: '#ffffff';
+  height: 100%;
+  /*height: 74.5%;
+  transform: translateY(17%);*/
 }
 .layer-0 {
   z-index: 0;
