--- a/src/components/styles/Controls.css
+++ b/src/components/styles/Controls.css
@@ -25,11 +25,14 @@
 .btn-play {
   width: 6%;
   height: 18px;
-  padding: 4px;
-  margin: 4px;
   background-color: #365D80;
   border-radius: 3px;
   cursor: pointer;
   font-size: 0.8em;
   text-align: center;
+}
+
+.btn-playpause {
+  width: 100%;
+  height: 100%;
 }
