--- a/src/components/styles/MediaUI.css
+++ b/src/components/styles/MediaUI.css
@@ -1,20 +1,19 @@
-
-.video-ui {
+.media-ui {
   display: flex;
   flex-flow: row wrap;
 }
-.VideoPlayer {
+.MediaPlayer {
   max-width: 800px;
   max-height: 600px;
 }
 
-.VideoPlayer,
-.video-config {
+.MediaPlayer,
+.media-config {
   border-style: solid;
-  border-color: #365D80;
+  border-color: #365d80;
   border-width: 2px;
   border-radius: 4px;
-  background-color: #020A0F;
+  background-color: #020a0f;
   color: #ebf2f7;
   padding: 0px 2px 0px 2px;
   margin: 0px 6px 0px 6px;
@@ -24,26 +23,16 @@ span {
   opacity: 0;
 }
 
-
-
-.video-config {
-  resize: both;
-  overflow: hidden;
-}
-
-
-
 @media all and (min-width: 480px) {
-  .video-config {
+  .media-config {
     flex: 1 auto;
   }
 }
 @media all and (min-width: 768px) {
-  .VideoPlayer {
+  .MediaPlayer {
     order: 1;
   }
-  .video-config {
+  .media-config {
     order: 2;
   }
-
 }
