--- a/src/components/styles/MediaConfig.css
+++ b/src/components/styles/MediaConfig.css
@@ -1,4 +1,4 @@
-.video-config {
+.media-config {
   display: flex;
   min-width: 10%;
   max-width: 20%;
@@ -19,7 +19,7 @@
   padding-top: 8px;
 }
 @media screen and (max-width: 1125px) {
-  .VideoPlayer {
+  .MediaPlayer {
     width: 600px;
     height: 450px;
   }
@@ -31,7 +31,7 @@
     height: 450px;
   }
 
-  .loaded-video {
+  .loaded-media {
     width: 600px;
     height: 450px;
   }
@@ -40,7 +40,7 @@
   }
 }
 @media screen and (max-width: 825px) {
-  .VideoPlayer {
+  .MediaPlayer {
     width: 400px;
     height: 300px;
   }
@@ -49,7 +49,7 @@
     height: 300px;
   }
 
-  .loaded-video {
+  .loaded-media {
     width: 400px;
     height: 300px;
   }
