--- a/src/components/styles/MediaPlayer.css
+++ b/src/components/styles/MediaPlayer.css
@@ -12,7 +12,7 @@
   transform: translate(-50%, -50%);
 }
 
-.loaded-video {
+.loaded-media {
   display: block;
   position: fixed;
   width: 800px;
