--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   display: block;
   max-width: 100%;
   height: 656px;
+  background-color: inherit;
 }
 
 .App-header {
@@ -19,10 +20,10 @@
 
 .now-playing,
 .FileLoader {
-  border-style: solid;
+  /*border-style: solid;
   border-color: #365d80;
   border-width: 2px;
-  border-radius: 4px;
+  border-radius: 4px;*/
   background-color: #020a0f;
   color: #C1F7CF;
   text-align: center;
