--- a/src/components/styles/Controls.css
+++ b/src/components/styles/Controls.css
@@ -1,25 +1,37 @@
 .Controls {
   max-width: 806px;
   height: 40px;
-  border-style: solid;
+  /*border-style: solid;
   border-color: #365D80;
   border-width: 2px;
-  border-radius: 4px;
+  border-radius: 4px;*/
   background-color: #020A0F;
   color: #ebf2f7;
   text-align: left;
   margin: 6px;
   display: flex;
   flex-flow: row wrap;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #progressSlider {
   width: 90%;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .progress-slider {
   width: 80%;
   margin: auto;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .btn-play {
