--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: left;
   display: block;
   max-width: 100%;
-  height: 656px;
+  height: auto;
   background-color: inherit;
 }
 
@@ -20,17 +20,13 @@
 
 .now-playing,
 .FileLoader {
-  /*border-style: solid;
-  border-color: #365d80;
-  border-width: 2px;
-  border-radius: 4px;*/
   background-color: #020a0f;
   color: #C1F7CF;
   text-align: center;
   letter-spacing: 1.5px;
   height: 100%;
   margin: justify;
-
+  z-index: 200;
 }
 
 .App-header p {
