--- a/src/components/styles/MediaConfig.css
+++ b/src/components/styles/MediaConfig.css
@@ -54,6 +54,9 @@
     letter-spacing: 1.2px;
     width: 603px;
   }
+  .file-size {
+    font-size: 10px;
+  }
 }
 @media screen and (max-width: 825px) {
   .MediaPlayer {
@@ -76,6 +79,9 @@
     font-size: 10px;
     letter-spacing: 0.8px;
     width: 402px;
+  }
+  .file-size {
+    font-size: 8px;
   }
 }
 input[type=range]:focus::-ms-fill-lower {
